--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "gh-pages": "^2.0.1",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
-    "react-scripts": "2.0.5"
+    "react-scripts": "2.0.5",
+    "reshake": "^1.1.6"
   },
   "scripts": {
     "start": "react-scripts start",
